# design

./: .babelrc  .babelrc.js  .gitignore  LICENSE  README.md  default.nix  derivation.nix  design-system.cabal  diff.sh  env-config.js  hypered-design.cabal  next.config.js  package-lock.json  package.json  release.nix  render-components.js  shell.nix
.storybook/: addons.js  config.js  main.js  preview.js
Hypered/: Html.hs  Stories.hs
Hypered/Design/: Command.hs  Guide.hs  Run.hs  Server.hs  Stories.hs
brochure/: HyperedReport.cls  README.md  build.sh  clean.sh  default.nix  embed-ibm-plex-mono-medium.map  example-blank.tex  example-copyright.tex  example-font.tex  example-full.tex  example-large-table.tex  example-simple.tex  latex.nix  ream-context.tex  sample.bib  shell.nix
components/: 0-Welcome.stories.js  Button.js  Code.js  Footer.js  H.js  Input.js  Layout.js  Nav.js  P.js  index.js
components/A/: A.js  A.stories.js
components/Alert/: AlertGreen.js  AlertRed.js  AlertYellow.js  index.js
components/Banner/: Banner.js  Banner.stories.js
components/BlockQuote/: BlockQuote.js  BlockQuote.stories.js
components/Button/: Button.js  Button.stories.js
components/ButtonLink/: ButtonLink.js  ButtonLink.stories.js
components/Checkbox/: Checkbox.js  Checkbox.stories.js
components/Code/: Code.js  Code.stories.js
components/Codeblock/: Codeblock.js  Codeblock.stories.js
components/Colours/: Colours.stories.js  colours.stories.js
components/ContainerWithLabel/: ContainerWithLabel.js  ContainerWithLabel.stories.js
components/Dropdown/: Dropdown.js  Dropdown.stories.js
components/Editable/: Editable.js  Editable.stories.js
components/Footer/: Footer.js  Footer.stories.js
components/Form/: Form.js  Form.stories.js
components/HR/: HR.js  HR.stories.js
components/Image/: Image.js  Image.stories.js
components/Input/: Input.js  Input.stories.js
components/Layout/: BlogListLayout.js  BlogPost1Layout.js  BlogPost2Layout.js  BlogPostLayout.js  Layout.js  Layout.stories.js  WithSidebarLayout.js
components/List/: List.js  List.stories.js
components/Modal/: Modal.js  Modal.stories.js
components/Nav/: Nav.js  Nav.stories.js
components/NavBlock/: NavBlock.js  NavBlock.stories.js
components/Navigation/: Navigation.js  Navigation.stories.js
components/Radio/: Radio.js  Radio.stories.js
components/SidePanel/: SidePanel.js  SidePanel.stories.js
components/Sidebar/: Sidebar.js  Sidebar.stories.js
components/StatusCode/: StatusCode.js  StatusCode.stories.js
components/Table/: TD.js  TH.js  Table.js  Table.stories.js  index.js
components/Title/: Title.js  Title.stories.js
components/Typography/: Typography.js  Typography.stories.js
components/Whitespace/: Whitespace.stories.js  whitespace.stories.js
components/home/: ComponentsSection.js  Divider.js  FooterSection.js  Gallery.js  GalleryPreviewSection.js  GettingStartedSection.js  HeaderSection.js  HomeLayout.js  IntroductionSection.js  NavSection.js  Section.js
d3/: README.md  gulpfile.js  hypered.js  package.json
d3/graphs/: 00.js
data/: bus-stops.js
docbook/: README.md  default.nix  minimal.xml
docs/: 404.html  CNAME  c-content.html  c-toolbar.html  components.html  index.html  more.html  nav-block.html  nix.html  sprint-2.html  static-binaries.html  u-placeholder.html
docs/404/: index.html
docs/blog/: README.html  expose-local-server.html  index.html  installing-nix.html  starting-with-nixops-1.html  starting-with-nixops-2.html
docs/components/: banner--red.html  button--full-width.html  button--primary-disabled.html  button--secondary-disabled.html  example--side-panel.html  example--sidebar.html  index.html  navigation.html
docs/examples/: grid.html  images.html  static-binaries-toolbar.html  static-binaries.html  two-thirds-one-third.html
docs/haddock/: Hypered-Html.html  Hypered-Stories.html  design-system.haddock  design-system.txt  doc-index.html  index.html  mini_Hypered-Html.html  mini_Hypered-Stories.html
docs/hs/: a--black.html  a--blue.html  banner--green.html  banner--red.html  banner--yellow.html  blockquote--default.html  blockquote--pull-quote-example.html  blockquote--with-optional-pull-quote-example.html  button--full-width.html  button--primary-disabled.html  button--primary-large.html  button--primary.html  button--secondary-disabled.html  button--secondary-large.html  button--secondary.html  buttonlink--full-width.html  buttonlink--primary-disabled.html  buttonlink--primary-large.html  buttonlink--primary.html  buttonlink--secondary-disabled.html  buttonlink--secondary-large.html  buttonlink--secondary.html  checkbox--default.html  checkbox--pill.html  code-block.html  codeblock--default.html  codeblock--editable-bottom-button.html  codeblock--editable-toolbar-button.html  codeblock--editable.html  codeblock--textarea-bottom-button.html  codeblock--textarea-toolbar-button.html  codeblock--textarea.html  codeblock--with-table.html  colour--text.html  (+76 more)
emails/: README.md  default.nix  example.mjml  package-lock.json  package.json  test-email.mjml
epub/: README.md  epub.css
firefox-vm-design/: README.md  vm-test.nix
itcss/: README.md  build.sh  default.nix  gulpfile.js  node2nix.sh  package.json  postcss.config.js  serve.sh  shell.nix
machine/: https.nix
modules/: hypered-design.nix  nginx.nix
nix/: contents.nix  overlay.nix  overlays.nix  sources.json
pages/: 404.js  _app.js  _error.js  blog.js  components.js  index.js  sprint-2.js
pandoc/: default.html  lua.md  struct.html  struct.md  tachyons.lua
pandoc-pdflatex/: default.nix  example.md
scripts/: build-hypered-guide.sh  change-haddock.sh  create-stories-hs.sh  ghci.conf  ghci.sh  ghcid.sh  list-stories.sh  list-story-categories.sh  replace-md-links.sh  serve.sh
site/: default.nix  index.md  nav-block.md  nix.md
slides/: default.revealjs
struct/: Makefile  README.md  build.sh  default.nix  generate-dejavu-fonts.sh  notes.md  serve.sh  shell.nix
test-site/: index.html  replaced.html
xelatex/: default.nix  example.tex
xslt/: README.md  data.xml  default.nix  table.xsl
(+548 files in other folders)
