name:                design-system
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Design system for Hypered.
description:         Design system for Hypered.
category:            System
license:             BSD2
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple

library
  build-depends:       base == 4.*,
                       blaze-builder,
                       blaze-html,
                       directory,
                       filepath,
                       text
  exposed-modules:     Hypered.Html
  ghc-options:         -Wall

executable hypered-guide
  hs-source-dirs:      bin
  main-is:             hypered-guide.hs
  build-depends:       base == 4.*,
                       design-system
  ghc-options:         -Wall
