cabal-version:       2.2
name:                hypered-design
version:             0.0.0
synopsis:            Design system for Hypered.
description:         A design system for Hypered projects.
category:            System
license:             BSD-2-Clause
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple

library
  hs-source-dirs: src
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    TypeApplications
    TypeOperators
  build-depends:
      aeson
    , base == 4.*
    , blaze-builder
    , blaze-html
    , blaze-markup
    , blaze-svg
    , commence
    , directory
    , exceptions
    , filepath
    , http-api-data
    , http-types
    , optparse-applicative
    , pretty-simple
    , pandoc
    , protolude
    , servant
    , servant-blaze
    , servant-server
    , systemd
    , tagsoup
    , text
    , wai
    , wai-app-static
    , warp
  exposed-modules:     Hypered.Design.Command,
                       Hypered.Design.Examples,
                       Hypered.Design.Fluid,
                       Hypered.Design.IO,
                       Hypered.Design.Guide,
                       Hypered.Design.Run,
                       Hypered.Design.Server,
                       Hypered.Design.Stories,
                       Hypered.Design.Templates,
                       Hypered.Html.Common,
                       Hypered.Html.Helpers,
                       Hypered.Html.Struct.Prototypes.Motherboard.Documents,
                       Hypered.Html.Struct.Prototypes.Motherboard.Indices,
                       Hypered.Html.Struct.Prototypes.Refli.Common,
                       Hypered.Html.Struct.Prototypes.Refli.LandingPage,
                       Hypered.Html.Struct.Specimens,
                       Hypered.Html.Tachyons
  ghc-options:         -Wall

executable hypered-design
  hs-source-dirs:      bin
  main-is:             hypered-design.hs
  build-depends:       base == 4.*,
                       blaze-html,
                       hypered-design,
                       optparse-applicative,
                       protolude,
                       text
  ghc-options:         -Wall
